# o-phone

./: .env.example  .gitignore  README.md  call.py  config.py  firestore_client.py  hold.py  interests.py  main.py  notify_parent.py  pyproject.toml  seed_firestore.py
docs/: index.html
